restructured view, table, details panels